patch antex to support passing macrolib to job

--- a/_nodes/0007.md
+++ b/_nodes/0007.md
@@ -11,7 +11,7 @@ functor; then we may define a displayed category $\InvImg{F}E$ as over $X$ follo
    \to y$, a morphism $\bar{x}\to\Sub{f}\bar{y}$ in $\InvImg{F}E$ is given by a morphism $\bar{x}\to\Sub{Ff}\bar{y}$ in $E$.
 
 We visualize the change of base scenario as follows:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   nw/style = pullback,
   west/style = lies over,
@@ -23,6 +23,4 @@ We visualize the change of base scenario as follows:
   se = B,
   south = F,
 }
-»
-
-
+{%endtex%}
