--- a/_nodes/000G.md
+++ b/_nodes/000G.md
@@ -10,7 +10,7 @@ $\SET$ as follows.
 Consider an index set $I\in \SET$ and two families $u,v\in C^I$. We may define
 an $I$-indexed collection $[u,v]\Sub{i\in I}$ consisting (pointwise) of all the
 morphisms $u\Sub{i}\to v\Sub{i}$ in $C$:
-«[u,v]\Sub{i} = \{ f \mid f: u\Sub{i}\to v\Sub{i} \}»
+{%tex macrolib: topos%}[u,v]\Sub{i} = \{ f \mid f: u\Sub{i}\to v\Sub{i} \}{%endtex%}
 
 If $C$ is locally small, $[u,v]\Sub{i\in I}$ is in fact a family of sets for
 any $I\in\SET$ as each $[u,v]\Sub{i}$ is a set. Conversely, if $[u,v]\Sub{i\in I}$
