--- a/_nodes/000L.md
+++ b/_nodes/000L.md
@@ -10,7 +10,7 @@ To see that this is the case, suppose that $C$ has a set of objects. Then
 $C\in\SET$ and we define $\lfloor{C}\rfloor$ to be the displayed object
 $\brc{x}\Sub{x\in C}\in \FAM{C}[C]$. Fixing $I\in \SET$ and $z\in C^I$, we
 consider the cartesian map displayed over $z : I \to C$:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   height = 1.5cm,
   width = 3cm,
@@ -22,7 +22,7 @@ consider the cartesian map displayed over $z : I \to C$:
   ne = \brc{x}\Sub{x\in C},
   nw = {z = \brc{z\,i}\Sub{i\in I} }
 }
-»
+{%endtex%}
 
 Conversely assume that $\FAM{C}$ has a generic object $\bar{u}\in\FAM{C}[U]$
 for some $U\in \SET$; then we may equip $U$ with the structure of a globally
@@ -34,7 +34,7 @@ morphism $x\to y\in U$ to be given by the following data:
 3. and a vertical map $h:a\to b$ in $\FAM{C}[1]\simeq C$,
 
 such that $(a\Sub{1},b\Sub{1},h\Sub{1})$ is identified with $(a\Sub{2},b\Sub{2},h\Sub{2})$ when $h_1$ and $h_2$ are equal modulo the (unique) vertical isomorphisms between the cartesian lifts in the sense depicted below:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
   \SpliceDiagramSquare{
     nw = a_1,
@@ -51,7 +51,7 @@ such that $(a\Sub{1},b\Sub{1},h\Sub{1})$ is identified with $(a\Sub{2},b\Sub{2},
   \draw[->] (ne) to node [sloped,above] {cart.}(u);
   \draw[->] (se) to node [sloped,below] {cart.} (u);
 \end{tikzpicture}
-»
+{%endtex%}
 
 Remember that a cartesian map $a\to\Sub{x}\bar{u}$ is standing for a *choice*
 of an object of $C$ encoded by $x\in U$. Because such choices are unique only
