--- a/_nodes/000Y.md
+++ b/_nodes/000Y.md
@@ -9,7 +9,7 @@ Fix $x\in E$ and $u,v\in
 \brk{C}\Sub{x}$, we must exhibit a terminal object to the (total) category
 $\TotCat{\CandHom{x}{u}{v}}$ of "hom candidates" defined in {%ref 000I%}.
 First we define $\brk{u,v}$ to be the following pullback in $E$:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   nw/style = pullback,
   ne = C\Sub{1},
@@ -23,11 +23,11 @@ First we define $\brk{u,v}$ to be the following pullback in $E$:
   west/style = {->,exists},
   north/style = {->,exists},
 }
-»
+{%endtex%}
 
 We define $\overline{p}:\InvImg{\brk{u,v}}{u}\to\Sub{p} u\in \brk{C}\Sub{\brk{u,v}}$ to be
 the cartesian lift of $u\in \brk{C}\Sub{x}$ along $p:\brk{u,v}\to x$:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   height = 1.5cm,
   nw/style = pullback,
@@ -41,13 +41,13 @@ the cartesian lift of $u\in \brk{C}\Sub{x}$ along $p:\brk{u,v}\to x$:
   south = p,
   north = \overline{p},
 }
-»
+{%endtex%}
 
 We need to define a displayed evaluation map
 $\epsilon : \InvImg{\brk{u,v}}u\to\Sub{p} v$; unraveling the definition of a displayed
 morphism in the externalization of $C$, we choose the following diagram:
 
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       ne = C\Sub{1},
@@ -68,12 +68,12 @@ morphism in the externalization of $C$, we choose the following diagram:
     \draw[->] (nnw) to node [above] {$u$} (nne);
     \draw[->] (nw) to node [desc] {$\InvImg{\brk{u,v}}{u}$} (nne);
   \end{tikzpicture}
-»
+{%endtex%}
 
 
 Putting all this together, we assert that the terminal object of
 $\TotCat{\CandHom{x}{u}{v}}$ is the following span in $\brk{C}$:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
 \SpliceDiagramSquare<l/>{
   height = 1.5cm,
@@ -101,10 +101,10 @@ $\TotCat{\CandHom{x}{u}{v}}$ is the following span in $\brk{C}$:
   south = p,
 }
 \end{tikzpicture}
-»
+{%endtex%}
 
 Fixing another such candidate hom span $\brc{u \leftarrow \bar{h}\rightarrow v}\in\TotCat{\CandHom{x}{u}{v}}$, according to {%ref 000I%} we must exhibit a unique cartesian morphism $\bar\alpha : \bar{h}\to \InvImg{\brk{u,v}}{u}$ making the following diagram commute:
-   «
+   {%tex macrolib: topos%}
    \begin{tikzpicture}[diagram]
      \node (u) {$u$};
      \node (h) [above right = 1.5cm of u,xshift=.5cm] {$\bar{h}$};
@@ -116,13 +116,13 @@ Fixing another such candidate hom span $\brc{u \leftarrow \bar{h}\rightarrow v}\
      \draw[->] (h) to node [sloped,above] {$\epsilon\Sub{h}$} (v);
      \draw[->] (h) to node [upright desc] {$\bar\alpha$} (hom);
    \end{tikzpicture}
-   »
+   {%endtex%}
 
 First we note that the evaluation map $\epsilon\Sub{h} : \bar{h}\to v$ amounts
 to an internal morphism $h\to C\Sub{1}$ satisfying the appropriate
 compatibility conditions. Therefore we may define the base $\alpha:h\to \brk{u,v}$ of
 the universal map using the universal property of the pullback that defines $\brk{u,v}$:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
   \SpliceDiagramSquare{
     nw/style = pullback,
@@ -142,14 +142,14 @@ the universal map using the universal property of the pullback that defines $\br
   \draw[->,bend left=30] (h) to node [sloped,above] {$\epsilon_h$} (ne);
   \draw[->,exists] (h) to node [desc] {$\alpha$} (nw);
 \end{tikzpicture}
-»
+{%endtex%}
 
 The morphism $\alpha:h\to \brk{u,v}$ defined above is the *unique* map in $E$
 satisfying the conditions required of the base for $\bar\alpha$; therefore, it
 suffices to show that there exists a cartesian morphism
 $\bar\alpha:\bar{h}\to\Sub{\alpha}\InvImg{\brk{u,v}}u$ since it will be unique if it
 exists. We define $\bar\alpha$ using the universal property of the cartesian lift:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
   \SpliceDiagramSquare<l/>{
     ne/style = pullback,
@@ -182,7 +182,7 @@ exists. We define $\bar\alpha$ using the universal property of the cartesian lif
   \draw[->,bend left=30] (l/nw) to node [above] {$\bar{p}\Sub{h}$} (r/ne);
   \draw[->,bend right=30] (l/sw) to node [below] {$p\Sub{h}$} (r/se);
 \end{tikzpicture}
-»
+{%endtex%}
 
 That $\bar{\alpha}:\bar{h}\to\Sub{\alpha}\InvImg{\brk{u,v}}u$ is cartesian follows from the
 "generalized pullback lemma" for cartesian morphisms {%ref 0014 %}: it suffices
