--- a/_nodes/0011.md
+++ b/_nodes/0011.md
@@ -7,7 +7,7 @@ of an internal category $\gl{\bar{u}}$ in $B$. In particular, we let the object 
 
 We will think of the fiber $E\Sub{u\times u}$ as the category of
 objects indexed in the *boundary* (source and target) of a morphism. Restricting $\bar{u}$ along the source and target projections, we obtain the displayed objects of "points of the source" and "points of the target" respectively:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   height = 1.5cm,
   nw/style = pullback,
@@ -33,7 +33,7 @@ objects indexed in the *boundary* (source and target) of a morphism. Restricting
   south = \pi\Sub{2},
   north = \bar{\pi}\Sub{2},
 }
-»
+{%endtex%}
 
 Because $E$ is locally small, there is an object
 $\brk{\bar\partial\Sub{1},\bar\partial\Sub{2}}\in \Sl{B}{u\times u}$ that
