--- a/_nodes/001C.md
+++ b/_nodes/001C.md
@@ -5,7 +5,7 @@ taxon: definition
 
 For any $x\in B$ and displayed objects $u,v\in E\Sub{x}$, we define a *hom
 candidate* for $u,v$ to be a span $u\leftarrow \bar{h} \rightarrow v$ in $E$ in which the left-hand leg is cartesian:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
 \SpliceDiagramSquare<l/>{
   height = 1.5cm,
@@ -33,7 +33,7 @@ candidate* for $u,v$ to be a span $u\leftarrow \bar{h} \rightarrow v$ in $E$ in 
   south = p\Sub{h},
 }
 \end{tikzpicture}
-»
+{%endtex%}
 
 In the above, $h$ should be thought of as a candidate for the "hom object" of $u,v$,
 and $\epsilon\Sub{h}$ should be viewed as the structure of an "evaluation map" for $h$.
@@ -47,7 +47,7 @@ This structure can be rephrased in terms of a displayed category $\CandHom{x}{u}
    $\bar{h}\in \CandHom{x}{u}{v}\Sub{h}$, a morphism $\bar{h}\to\Sub{\alpha} \bar{l}$ is given by a
    cartesian morphism $\bar\alpha:\bar{l}\to\Sub{\alpha}\bar{h}$ in $E$ such that the
    following diagram commutes:
-   «
+   {%tex macrolib: topos%}
    \begin{tikzpicture}[diagram]
      \node (u) {$u$};
      \node (l) [above right = 1.5cm of u,xshift=.5cm] {$\bar{l}$};
@@ -59,4 +59,4 @@ This structure can be rephrased in terms of a displayed category $\CandHom{x}{u}
      \draw[->] (l) to node [sloped,above] {$\epsilon\Sub{l}$} (v);
      \draw[->] (l) to node [upright desc] {$\bar\alpha$} (h);
    \end{tikzpicture}
-   »
+   {%endtex%}
