--- a/_nodes/001S.md
+++ b/_nodes/001S.md
@@ -10,7 +10,7 @@ The externalization $\brk{\gl{\bar{u}}}$ of the internal category $\gl{\bar{u}}$
 1. Fix $x\in B$ and $\chi\Sub{x} \in \brk{\gl{\bar{u}}}\Sub{x}$, i.e. $\chi\Sub{x} : x\to u$; we define $F\prn{\chi\Sub{x}}$ to be an arbitrary cartesian map $\phi\Sub{x} : \bar{x}\to\Sub{\chi\Sub{x}} \bar{u}$. (Here we have used the axiom of choice for collections {%ref 000R%}.)
 
 2. Fix $f : x\to y\in B$ and $\chi\Sub{x} :x\to u$ and $\chi\Sub{y}:y\to u$ and a diagram representing a displayed morphism $h$ from $\chi\Sub{x}$ to $\chi\Sub{y}$ over $f$ as below:
-   «
+   {%tex macrolib: topos%}
    \begin{tikzpicture}[diagram]
    \node (x) {$x$};
    \node (y) [below = of x] {$y$};
@@ -24,13 +24,13 @@ The externalization $\brk{\gl{\bar{u}}}$ of the internal category $\gl{\bar{u}}$
    \draw[->] (x) to node [left] {$f$} (y);
    \draw[->] (x) to node [sloped,above] {$\chi\Sub{x}$} (C/0');
    \end{tikzpicture}
-   »
+   {%endtex%}
 
    We must define $F\prn{h}:\bar{x}\to\Sub{f} \bar{y}$, fixing arbitrary
    cartesian maps $\bar\chi\Sub{x}:\bar{x}\to\Sub{\chi\Sub{x}}\bar{u}$ and
    $\bar\chi\Sub{y}:\bar{y}\to\Sub{\chi\Sub{y}}\bar{u}$. First we lift $h:x\to \brk{\bar\partial\Sub{1},\bar\partial\Sub{2}}$
    into $E$ using the universal property of the cartesian lift:
-   «
+   {%tex macrolib: topos%}
     \begin{tikzpicture}[diagram]
       \SpliceDiagramSquare<0/>{
         height = 1.5cm,
@@ -77,10 +77,10 @@ The externalization $\brk{\gl{\bar{u}}}$ of the internal category $\gl{\bar{u}}$
       \draw[->,bend left=30] (0/nw) to node [above] {$\bar\chi\Sub{x}$} (2/ne);
       \draw[->,bend right=30] (0/se) to node [below] {$s$} (2/se);
     \end{tikzpicture}
-   »
+   {%endtex%}
 
    By composition with the "evaluation map" for our hom object, we have a map $\bar{x}\to\Sub{f;\chi\Sub{y}}\bar{u}$:
-   «
+   {%tex macrolib: topos%}
     \begin{tikzpicture}[diagram]
       \SpliceDiagramSquare<0/>{
         height = 1.5cm,
@@ -125,10 +125,10 @@ The externalization $\brk{\gl{\bar{u}}}$ of the internal category $\gl{\bar{u}}$
       \draw[bend right=30,->] (0/sw) to node [sloped,below] {$f$} (y);
       \draw[bend right=30,->] (y) to node [sloped,below] {$\chi\Sub{y}$} (2/se);
     \end{tikzpicture}
-   »
+   {%endtex%}
 
    Next we define $F\prn{h}:\bar{x}\to\Sub{f}\bar{y}$ using the universal property of (another) cartesian lift:
-   «
+   {%tex macrolib: topos%}
     \begin{tikzpicture}[diagram]
       \SpliceDiagramSquare<l/>{
         height = 1.5cm,
@@ -158,5 +158,5 @@ The externalization $\brk{\gl{\bar{u}}}$ of the internal category $\gl{\bar{u}}$
       }
       \draw[->,bend left=30] (l/nw) to node [above] {$\bar{h};\bar{\epsilon};\bar\pi\Sub{2}$} (r/ne);
     \end{tikzpicture}
-   »
+   {%endtex%}
 {%qed%}
