--- a/_nodes/001X.md
+++ b/_nodes/001X.md
@@ -9,7 +9,7 @@ $\SelfIx{B}$ over $B$ given fiberwise by the *slices* of $B$.
    of pairs $(\bar{x}\in B,p\Sub{x}:\bar{x}\to x)$.
 2. For $f : x\to y\in B$, we define $\SelfIx{B}\Sub{f}$ to be the collection of
    commuting squares in the following configuration:
-«
+{%tex macrolib: topos%}
   \DiagramSquare{
     height = 1.7cm,
     nw = \bar{x},
@@ -24,4 +24,4 @@ $\SelfIx{B}$ over $B$ given fiberwise by the *slices* of $B$.
     east/style = {->,exists},
     north/style = {->,exists},
   }
-»
+{%endtex%}
