--- a/_nodes/002B.md
+++ b/_nodes/002B.md
@@ -24,7 +24,7 @@ Grothendieck, and let $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ be the hypocartesian
 lift of $f:x\to y$ at $\bar{y}\in E\Sub{y}$; we shall see that $\bar{f}$ is also
 a *cartesian* lift of $f$ at $\bar{y}$ by constructing a unique factorization as
 follows:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -45,13 +45,13 @@ follows:
     \draw[->] (u) to node [sloped,below] {$m$} (sw);
     \draw[->,exists] (u') to (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 Let $\bar{m}:\bar{u}\tick\to\Sub{m}\bar{x}$ be the hypocartesian lift of
 $m$ at $\bar{x}$, where $\bar{u}\tick\in E\Sub{u}$. By hypothesis, the
 composite $\bar{m};\bar{f} : \bar{u}\tick\to\Sub{m;f}\bar{y}$ is
 hypocartesian, so $\bar{h}$ factors uniquely through $\bar{m};\bar{f}$ over
 $\Idn{u}$:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -72,7 +72,7 @@ $\Idn{u}$:
     \draw[double] (u) to (sw);
     \draw[->,exists] (u') to node [desc] {$i$} (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 The composite $i;\bar{m} : \bar{u}\to\Sub{m}\bar{x}$ is the required (cartesian)
 factorization of $\bar{h}$ through $\bar{f}$ over $m$. To see that $i;\bar{m}$
 is the unique such map, we observe that all morphisms $\bar{u}\to\Sub{m}\bar{x}$
