--- a/_nodes/002C.md
+++ b/_nodes/002C.md
@@ -11,7 +11,7 @@ displayed morphism $\bar{f}$ is cartesian if and only if it is hypocartesian.
 Any cartesian map is clearly hypocartesian. To see that a hypocartesian map
 $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ in a cartesian fibration is cartesian, we
 consider the cartesian lift of $f:x\to y$ under $\bar{y}$:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   height = 1.5cm,
   west/style = lies over,
@@ -25,7 +25,7 @@ consider the cartesian lift of $f:x\to y$ under $\bar{y}$:
   north = \bar{f}\tick,
   north/style = {->,exists},
 }
-»
+{%endtex%}
 
 As the cartesian lift $\bar{x}\tick\to \bar{y}$ is also hypocartesian, it
 follows that there is a unique vertical isomorphism identifying $\bar{x}$ with
