--- a/_nodes/002Z.md
+++ b/_nodes/002Z.md
@@ -9,7 +9,7 @@ follows:
    $(\bar{x}\in B,p\Sub{x}:x\to\bar{x})$.
 2. For $f : x\to y\in B$, define $\overline{B}\Sub{f}$ to be the collection of
    commuting squares in the following configuration:
-«
+{%tex macrolib: topos%}
   \DiagramSquare{
     height = 1.7cm,
     sw = \bar{x},
@@ -24,4 +24,4 @@ follows:
     east/style = {->,exists},
     south/style = {->,exists},
   }
-»
+{%endtex%}
