--- a/_nodes/0034.md
+++ b/_nodes/0034.md
@@ -6,7 +6,7 @@ taxon: computation
 Let $X,Y$ be a pair of topoi over a geometric morphism $E$ and let $f,g,h : X\to Y$ be morphisms of topoi; given 2-cells $\alpha : f \to g$ and $\beta : g \to h$, we will define the composite 2-cell $\alpha;\beta : f \to h$.
 
 First we unfold what we are given into the language of geometric universes; the morphisms of topoi unravel to the following morphisms and 2-cells of geometric universes:
-«
+{%tex macrolib: topos%}
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
 \zxN{} &\zxX[pilr]{\varphi_f}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
@@ -24,10 +24,10 @@ First we unfold what we are given into the language of geometric universes; the 
 \zxN{} &\zxX[pilr]{\varphi_h}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{h}}\\[3mm]
 \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-»
+{%endtex%}
 
 The given 2-cells of topoi $\alpha:f\to g$ and $\beta : g \to h$ unravel into 2-cells between morphisms of geometric universe $\Sh{\alpha} : \Sh{f}\to \Sh{g}$ and $\Sh{\beta}:\Sh{g}\to\Sh{f}$ satisfying the following equations:
-«
+{%tex macrolib: topos%}
 \begin{aligned}
 \begin{ZX}[ampersand replacement=\&]
   \zxN{} \&\dar[close]{X}\\
@@ -55,10 +55,10 @@ The given 2-cells of topoi $\alpha:f\to g$ and $\beta : g \to h$ unravel into 2-
   \zxN{} \& \zxN{} \& \zxN{}
 \end{ZX}
 \end{aligned}
-»
+{%endtex%}
 
 We choose $\Sh{\alpha;\beta}$ to be the composite 2-cell depicted below:
-«
+{%tex macrolib: topos%}
 \begin{ZX}
 \dar[close]{\Sh{f}}\\
 \zxX[pilr]{\Sh{\alpha;\beta}}\dar[close]{\Sh{h}}\\
@@ -71,10 +71,10 @@ We choose $\Sh{\alpha;\beta}$ to be the composite 2-cell depicted below:
 \zxX[pilr]{\Sh{\beta}} \dar[close]{\Sh{h}}\\
 \zxN{}
 \end{ZX}
-»
+{%endtex%}
 
 We must check the following equation of 2-cells:
-«
+{%tex macrolib: topos%}
 \begin{ZX}
   \zxN{} &\dar[close]{X}\\
    \zxN{} & \zxX[pilr]{\varphi_f} \arrow[-N', near end, close, swap]{ddl}{Y} \drar[N, close, pos=.6]{\Sh{f}}\\
@@ -87,10 +87,10 @@ We must check the following equation of 2-cells:
   \zxN{} &\zxX[pilr]{\varphi_h}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{h}}\\[3mm]
   \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-»
+{%endtex%}
 
 The above follows by unfolding the definition of $\Sh{\alpha;\beta}$ and using the assumed equations concerning $\Sh{\alpha}$ and $\Sh{\beta}$:
-«
+{%tex macrolib: topos%}
 \begin{aligned}
 \begin{ZX}[ampersand replacement = \&]
    \zxN{} \&\dar[close]{X}\\
@@ -122,5 +122,5 @@ The above follows by unfolding the definition of $\Sh{\alpha;\beta}$ and using t
    \zxN{} \& \zxN{} \& \zxN{}
 \end{ZX}
 \end{aligned}
-»
+{%endtex%}
 {%qed%}
