--- a/_nodes/0001.md
+++ b/_nodes/0001.md
@@ -8,7 +8,7 @@ $\bar{f}:\bar{x}\to\Sub{f} \bar{y}$ in $E$ is called *cartesian* over $f$ when f
 any $m:u\to x$ and $\bar{h}:\bar{u}\to\Sub{m;f} \bar{y}$ there exists a unique
 $\bar{m} : \bar{u}\to\Sub{m} \bar{x}$ with $\bar{m};\bar{f} = \bar{h}$. We visualize
 this unique factorization of $\bar{h}$ through $\bar{f}$ over $m$ as follows:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -30,9 +30,8 @@ this unique factorization of $\bar{h}$ through $\bar{f}$ over $m$ as follows:
     \draw[->] (u) to node [sloped,below] {$m$} (sw);
     \draw[->,exists] (u') to node [desc] {$\bar{m}$} (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 
 Above we have used the "pullback corner" to indicate $\bar{x}\to\bar{y}$ as a
 cartesian map. We return to this in our discussion of the self-indexing {%ref 0003 %}
 of a category.
-
