--- a/_nodes/000B.md
+++ b/_nodes/000B.md
@@ -12,7 +12,7 @@ equivalence with the naïve one in all cases that the latter is meaningful.
 1. We define an object of $P\Sub{x}$ to be a pair $(u,\phi\Sub{u})$ where $u\in E$ and
    $\phi\Sub{u} : Pu\cong x$. It is good to visualize such a pair as a "crooked
    leg" like so:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
 \node (u) {$u$};
 \node (Pu) [below = 1cm of u] {$Pu$};
@@ -20,12 +20,12 @@ equivalence with the naïve one in all cases that the latter is meaningful.
 \draw[lies over] (u) to (Pu);
 \draw[->] (Pu) to node [below] {$\phi\Sub{u}$} (x);
 \end{tikzpicture}
-»
+{%endtex%}
 
 2. A morphism $(u,\phi\Sub{u})\to\Sub{f} (v,\phi\Sub{v})$ over $f : x \to y$ is given by
    a morphism $h : u\to v$ that lies over $f$ modulo the isomorphisms
    $\phi\Sub{u},\phi\Sub{v}$ in sense depicted below:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
 \node (pu) {$Pu$};
 \node (pv) [right = of pu] {$Pv$};
@@ -41,7 +41,7 @@ equivalence with the naïve one in all cases that the latter is meaningful.
 \draw[->] (pv) to node [sloped,above] {$\phi\Sub{v}$} (y);
 \draw[->,bend right=30] (x) to node [below] {$f$} (y);
 \end{tikzpicture}
-»
+{%endtex%}
 
 @include{001U}
 
