--- a/_nodes/000H.md
+++ b/_nodes/000H.md
@@ -9,7 +9,7 @@ defined in {%cref 000G%}. The fact that each $[u,v]\Sub{i}$ is the set of all
 morphisms $u\Sub{i}\to v\Sub{i}$ can be rephrased more abstractly.
 
 First we consider the restriction of $u\in \FAM{C}[I]$ to $\FAM{C}[[u,v]]$ as follows:
-«
+{%tex macrolib: topos%}
 \DiagramSquare{
   nw/style = pullback,
   west/style = lies over,
@@ -23,7 +23,7 @@ First we consider the restriction of $u\in \FAM{C}[I]$ to $\FAM{C}[[u,v]]$ as fo
   south = p\Sub{[u,v]},
   north = \bar{p}\Sub{[u,v]}
 }
-»
+{%endtex%}
 Explicitly the family $\InvImg{[u,v]}u$ is indexed in a pair of an element $i\in I$ and a morphism $u\Sub{i}\to v\Sub{i}$.
 We can think of $\InvImg{[u,v]}u$ as the object of elements of $u\Sub{i}$ indexed in pairs $(i,u\Sub{i}\to v\Sub{i})$.
 
@@ -36,7 +36,7 @@ rephrased as a universal property: for any family $h\in\Sl{\SET}{I}$ and
 morphism $\epsilon\Sub{h} : \InvImg{h}u\to\Sub{h} v$ in $\FAM{C}$, there is a
 unique cartesian map $\InvImg{h}u\to \InvImg{[u,v]}u$ factoring $\epsilon\Sub{h}$ through $\epsilon\Sub{[u,v]}$
 in the sense depicted below:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
   \SpliceDiagramSquare{
     height = 1.5cm,
@@ -60,7 +60,7 @@ in the sense depicted below:
   \draw[->,exists] (h/u) to (nw);
   \draw[->,bend right=30] (h) to node [below] {$p\Sub{h}$} (se);
 \end{tikzpicture}
-»
+{%endtex%}
 
 To convince ourselves of this, we note that the family $H \coloneqq \brc{u\Sub{i}\to v\Sub{i}}\Sub{i\in I}$ itself satisfies the universal property above. Indeed, fix a candidate $h \in \Sl{\SET}{I}$ equipped with a map $\epsilon\Sub{h} : \InvImg{h}u \to_h v$. Unfolding the meaning of this map in set theoretical notation, we see that it amounts to a family of maps $\epsilon\Sub{h}[i] : \prod\Sub{x\in h_i} \brc{u_i\to v_i}$ for each $i\in I$; such a family immediately induces the desired map $h\to H$.
 {%qed%}
