--- a/_nodes/000X.md
+++ b/_nodes/000X.md
@@ -6,7 +6,7 @@ The externalization {%ref 000V%} is globally small
 
 **Proof.**
 We may choose a generic object {%ref 000K%} for $\brk{C}$, namely the identity element $(C\Sub{0},\Idn{C\Sub{0}})\in \TotCat{\brk{C}}$. Given any object $(x,u)\in \TotCat{\brk{C}}$ the cartesian map $(x,u)\to (C\Sub{0},\Idn{C\Sub{0}})$ is given as follows:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
   \node (x) {$x$};
   \node (y) [below = of x] {$C\Sub{0}$};
@@ -20,5 +20,5 @@ We may choose a generic object {%ref 000K%} for $\brk{C}$, namely the identity e
   \draw[->] (x) to node [left] {$u$} (y);
   \draw[->] (x) to node [sloped,above] {$u$} (C/0');
 \end{tikzpicture}
-»
+{%endtex%}
 {%qed%}
