--- a/_nodes/001H.md
+++ b/_nodes/001H.md
@@ -7,7 +7,7 @@ Let $\bar{f} : \bar{x}\to\Sub{f}\bar{y}$, and suppose that
 $\bar{g} : \bar{y}\to\Sub{g}\bar{z}$ is cartesian over $g$. Then
 $\bar{f};\bar{g}$ is cartesian over $f;g$ if and only if $\bar{f}$ is cartesian
 over $f$.
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       height = 1.5cm,
@@ -27,11 +27,11 @@ over $f$.
     \draw[lies over] (x*) to (x);
     \draw[->] (x) to node [below] {$f$} (sw);
   \end{tikzpicture}
-»
+{%endtex%}
 
 **Proof.** Suppose first that $\bar{f}$ is cartesian. To see that $\bar{f};\bar{g}$
 is cartesian, we must construct a unique factorization as follows:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -60,7 +60,7 @@ is cartesian, we must construct a unique factorization as follows:
     \draw[->] (u) to node [sloped,below] {$m$} (sw);
     \draw[->,exists] (u') to (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 Because $\bar{g}$ is cartesian, we can factor $\bar{h} = i;\bar{g}$ for a unique
 $i:\bar{u}\to\Sub{m;f}\bar{y}$. Then, because $\bar{f}$ is cartesian, we can further
 factor $i = j;\bar{f}$ for a unique $j:\bar{u}\to\Sub{m}\bar{x}$. We conclude that
@@ -69,7 +69,7 @@ $\bar{h} = j;\bar{f};\bar{g}$, as required.
 
 Conversely, suppose that $\bar{f};\bar{g}$ is cartesian. To see that $\bar{f}$ is
 cartesian, we must construct a unique factorization as follows:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -97,7 +97,7 @@ cartesian, we must construct a unique factorization as follows:
     \draw[->] (u) to node [sloped,below] {$m$} (sw);
     \draw[->,exists] (u') to (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 Because $\bar{f};\bar{g}$ is cartesian, we can factor
 $\bar{h};\bar{g} = i;\bar{f};\bar{g}$ for a unique $i:\bar{u}\to\Sub{m}\bar{x}$.
 On the other hand, because $\bar{g}$ is cartesian, there is a unique
