--- a/_nodes/001P.md
+++ b/_nodes/001P.md
@@ -10,7 +10,7 @@ all its vertical maps are isomorphisms.
 $\bar{b}\in E\Sub{b}$, and a vertical map $f:\bar{b}\to\Sub{1\Sub{b}} \bar{b}$.
 Using the hypothesis that $f$ is cartesian, it has a unique section
 $g:\bar{b}\to\Sub{1\Sub{b}} \bar{b}$ as follows:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -32,7 +32,7 @@ $g:\bar{b}\to\Sub{1\Sub{b}} \bar{b}$ as follows:
     \draw[double] (u) to (sw);
     \draw[->,exists] (u') to node [desc] {$g$} (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 Likewise, because $g$ is cartesian, $f$ is the unique section of $g$; thus $f$ is an
 isomorphism in $E\Sub{b}$.
 
@@ -40,7 +40,7 @@ Conversely, suppose that $E$ is a cartesian fibration whose vertical maps are
 isomorphisms. Fix $f:x\to y \in B$ and an arbitrary displayed morphism
 $\bar{g}:\bar{x}\to\Sub{f}\bar{y}$. Then $\bar{g}$ is the precomposition of a
 cartesian lift $\bar{f}:\bar{x}\tick\to\Sub{f}\bar{y}$ with a vertical map:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -62,11 +62,11 @@ cartesian lift $\bar{f}:\bar{x}\tick\to\Sub{f}\bar{y}$ with a vertical map:
     \draw[double] (u) to (sw);
     \draw[->,exists] (u') to node [desc] {$i$} (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 Because vertical maps are isomorphisms and $\bar{f}$ is cartesian, we can observe
 that $\bar{g}$ is cartesian as follows, writing $\bar{m} : \bar{u}\to\Sub{m}
 \bar{x}\tick$ for the unique factorization of $\bar{h}$ through $\bar{f}$ over $m$:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
       west/style = lies over,
@@ -88,5 +88,5 @@ that $\bar{g}$ is cartesian as follows, writing $\bar{m} : \bar{u}\to\Sub{m}
     \draw[->] (u) to node [sloped,below] {$m$} (sw);
     \draw[->,exists] (u') to node [desc] {$\bar{m};i\Sup{-1}$} (nw);
   \end{tikzpicture}
-»
+{%endtex%}
 {%qed%}
