--- a/_nodes/001Z.md
+++ b/_nodes/001Z.md
@@ -10,7 +10,7 @@ $\OpCat{E}$ over $B$ like so:
 2. Given $f : x \to y\in B$, a morphism $\bar{x}\to_f \bar{y}$ in $\OpCat{E}$
    is given in terms of $E$ by a cartesian map $\bar{y}\Sub{f} : \bar{y}\Sub{x} \to\Sub{f} \bar{y}$ together
    with a *vertical* map $h : \bar{y}\Sub{x}\to\Sub{\Idn{x}} \bar{y}$ as depicted below:
-   «
+   {%tex macrolib: topos%}
     \begin{tikzpicture}[diagram]
       \SpliceDiagramSquare{
         height = 1.5cm,
@@ -29,12 +29,12 @@ $\OpCat{E}$ over $B$ like so:
       \draw[lies over] (x*) to (x);
       \draw[double] (x) to (sw);
     \end{tikzpicture}
-   »
+   {%endtex%}
    such that $\brc{\bar{x} \leftarrow \bar{y}\Sub{x}\Sup{1}\to \bar{y}}$ is
    identified with $\brc{\bar{x}\leftarrow\bar{y}\Sub{x}\Sup{2}\to \bar{y}}$
    when they agree up to the unique vertical isomorphism $\bar{y}\Sub{x}\Sup{1}\cong\bar{y}\Sub{x}\Sup{2}$
    induced by the universal property of cartesian maps in the sense that the following diagram commutes:
-   «
+   {%tex macrolib: topos%}
    \begin{tikzpicture}[diagram]
     \node (x) {$\bar{x}$};
     \node (yx/1) [above right = of x] {$\bar{y}\Sub{x}\Sup{1}$};
@@ -46,4 +46,4 @@ $\OpCat{E}$ over $B$ like so:
     \draw[->] (yx/2) to node [sloped,below] {cart.} (y);
     \draw[->] (yx/1) to node [upright desc] {$\cong$} (yx/2);
    \end{tikzpicture}
-   »
+   {%endtex%}
