--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -8,7 +8,7 @@ The displayed category $\OpCat{E}$ is a cartesian fibration.
 Fixing $\bar{y}\in \OpCat{E}\Sub{y}$ and $f:x\to y\in B$, we must
 exhibit a cartesian lift $\bar{f} : \bar{x}\to\Sub{f}\bar{y}\in \OpCat{E}$.
 By the characterization {%ref 000T%} it suffices to find *any* map over $f$ whose vertical component is an isomorphism. Writing $\bar{y}\Sub{x}\to\Sub{f}\bar{y}$ for the cartesian lift of $f$ in $E$, consider the map in $\OpCat{E}$ presented by the following span in $E$:
-«
+{%tex macrolib: topos%}
 \begin{tikzpicture}[diagram]
   \SpliceDiagramSquare<l/>{
     nw = \bar{y}\Sub{x},
@@ -32,5 +32,5 @@ By the characterization {%ref 000T%} it suffices to find *any* map over $f$ whos
     south = f,
   }
 \end{tikzpicture}
-»
+{%endtex%}
 {%qed%}
