--- a/_nodes/0025.md
+++ b/_nodes/0025.md
@@ -8,7 +8,7 @@ $E$* is defined to be a geometric universe $\Sh{X}$ equipped with an algebraic m
 small separator {%pref 002H%}. A morphism of $E$-topoi $f:{X}\to{Y}$ is defined by an algebraic
 morphism $\Sh{f}:\Sh{Y}\to\Sh{X}$ of geometric universes equipped with
 a 2-isomorphism $\varphi_{f}:X \cong Y;\Sh{f}$ in $[E,\Sh{X}]$.
-«
+{%tex macrolib: topos%}
     \begin{tikzpicture}[diagram]
       \node (E) {$E$};
       \node (S/Y) [below left = of E] {$\Sh{Y}$};
@@ -18,25 +18,25 @@ a 2-isomorphism $\varphi_{f}:X \cong Y;\Sh{f}$ in $[E,\Sh{X}]$.
       \draw[->] (E) to node [sloped,above] {$X$} (S/X);
       \node [between = E and S/f] {$\varphi_{f}$};
     \end{tikzpicture}
-»
+{%endtex%}
 
 It will often be convenient to display pasting diagrams as *string diagrams*,
 which we read in diagrammatic order from top left to bottom right. A string
 diagram views 2-cell as a "transformer" through which information passes
 along a wire; the input/output interface of such a transformer is written on
 the wires. Regions of whitespace denote objects of the ambient 2-category. Our pasting diagram above is depicted as a string diagram in $\AlgGU$ below:
-«
+{%tex macrolib: topos%}
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
 \zxN{} &\zxX[pilr]{\varphi_f}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
 \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-»
+{%endtex%}
 
 A 2-morphism $\alpha:{f}\to{g}$ in $[X,Y]$ is defined to be a
 2-morphism $\Sh{\alpha}:\Sh{f}\to{\Sh{g}}$ compatible with $\varphi_{f},\varphi_{g}$
 in the sense that the following pasting diagrams are equal:
-«
+{%tex macrolib: topos%}
   \begin{tikzpicture}[diagram,baseline=(S/X.base)]
     \node (E) {$E$};
     \node (S/Y) [below left = of E] {$\Sh{Y}$};
@@ -58,10 +58,10 @@ in the sense that the following pasting diagrams are equal:
     \draw[->,bend right=60] (S/Y) to node (S/g) [below] {$\Sh{g}$} (S/X);
     \node [between = S/Y and S/X] {$\varphi_g$};
   \end{tikzpicture}
-»
+{%endtex%}
 
 We may likewise represent the equation above in terms of string diagrams.
-«
+{%tex macrolib: topos%}
 \begin{ZX}
   \zxN{} &\dar[close]{X}\\
    \zxN{} & \zxX[pilr]{\varphi_f} \arrow[-N', near end, close, swap]{ddl}{Y} \drar[N, close, pos=.6]{\Sh{f}}\\
@@ -74,4 +74,4 @@ We may likewise represent the equation above in terms of string diagrams.
   \zxN{} &\zxX[pilr]{\varphi_g}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{g}}\\[3mm]
   \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-»
+{%endtex%}
