--- a/_nodes/0033.md
+++ b/_nodes/0033.md
@@ -4,16 +4,16 @@ taxon: computation
 ---
 
 Let $X,Y$ be a pair of topoi over a geometric universe $E$, and let $f : X \to Y$ be a morphism of $E$-topoi; we will construct the identity 2-cell $\Idn{f} : f \to f$ in the hom category $[X,Y]$. First of all, we unfold the data that we are given into the language of $\AlgGU$:
-«
+{%tex macrolib: topos%}
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
 \zxN{} &\zxX[pilr]{\varphi_f}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
 \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-»
+{%endtex%}
 
 We define $\Sh{\Idn{f}}$ to be the identity 2-cell $\Idn{\Sh{f}} : \Sh{f}\to \Sh{f}$; it remains to observe the following equation of 2-cells:
-«
+{%tex macrolib: topos%}
 \begin{ZX}
   \zxN{} &\dar[close]{X}\\
    \zxN{} & \zxX[pilr]{\varphi_f} \arrow[-N', near end, close, swap]{ddl}{Y} \drar[N, close, pos=.6]{\Sh{f}}\\
@@ -26,5 +26,5 @@ We define $\Sh{\Idn{f}}$ to be the identity 2-cell $\Idn{\Sh{f}} : \Sh{f}\to \Sh
   \zxN{} &\zxX[pilr]{\varphi_g}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
   \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-»
+{%endtex%}
 {%qed%}
